# Financial-News-Intelligent-System---Enterprise-Level

./: .gitignore  README.md  data_gathering_notebook.ipynb  main.py  pyproject.toml  template.py
artifacts/interim/: news_data.csv
artifacts/labelled/: news_data_labeled.csv
artifacts/transform/cleaned/: clean.csv
artifacts/transform/impact_score/: impact_scores.csv  next_day_news_with_stock_prices.csv
data/: alphavantage_news.csv
data_gathering/: scr2.py  script_notebook.ipynb  scripting.py
data_gathering/finnhub/: finnhub.ipynb  finnhub_data.csv
data_gathering/vantage/: alphavantage_news.csv  vantage.ipynb
local_data/: alphavantage_news.csv  script.py  vantage.ipynb
notebook/: experiment_1.ipynb
src/fni/api/: dependencies.py  main.py
src/fni/api/schema/: news.py
src/fni/components/: data_ingestion.py
src/fni/core/: config.py  constants.py  exceptions.py  logger.py  logging.py
src/fni/database/: configuration.py
src/fni/etl/: pipeline.py
src/fni/etl/extract_from_sources/: alphavantage.py
src/fni/etl/load/: configuration.py  load.py
src/fni/etl/transform/: clean.py
src/fni/etl/transform/impact_score/: get_impact_score.py
src/fni/etl/transform/labeller_LLM/: label.py
src/fni/ingestion/sources/: alphavantage.py
vantage/: script.py
