[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "Financial-News-Intelligent-System---Enterprise-Level"
version = "0.1.0"
description = "This is a financial news intelligent system made for finance analysts to reduce their workload in analyzing news and making an impactful decision."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "loguru>=0.7.3",
    "openai>=2.33.0",
    "pandas>=3.0.2",
    "psycopg2>=2.9.12",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "requests>=2.33.0",
    "uvicorn>=0.47.0",
    "yfinance>=1.3.0",
]
